--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@
   <div class="wrapper">
     <div class="calculator">
       <div class="screen">
+        <div class="screen__switch">
+          <div class="onoffswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="typeSwitch" checked>
+            <label class="onoffswitch-label" for="typeSwitch">
+              <span class="onoffswitch-inner"></span>
+              <span class="onoffswitch-switch"></span>
+            </label>
+          </div>        
+        </div>
+        <div class="screen-content">
+          <div class="screen__input"></div>
+          <div class="screen__expression"></div>
+        </div>
       </div>
       <div class="keypad">
-        <div class="numbers"></div>
-        <div class="operators"></div>
-        <div class="other"></div>
+      </div>
     </div>
   </div>
 
   <canvas id="space_box"></canvas>
   <script src="js/stars.js"></script>
   <script src="js/operate.js"></script>
+  <script src="js/calculator.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
