--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
               <span class="onoffswitch-inner"></span>
               <span class="onoffswitch-switch"></span>
             </label>
-          </div>        
+          </div> 
         </div>
         <div class="screen-content">
-          <div class="screen__input"></div>
+          <div class="screen__input">0</div>
           <div class="screen__expression"></div>
         </div>
       </div>
