--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Calculator</title>
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
@@ -31,6 +31,7 @@
   </div>
 
   <canvas id="space_box"></canvas>
+  <script src="js/utils.js"></script>
   <script src="js/stars.js"></script>
   <script src="js/operate.js"></script>
   <script src="js/calculator.js"></script>
